<resources>
    <string name="app_name">SafeHaven</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
</resources>